[gd_scene load_steps=7 format=3 uid="uid://cb2giul65b0v1"]

[ext_resource type="Script" path="res://Enemies/enemy_generator.gd" id="1_ewimx"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="2_63q4o"]
[ext_resource type="PackedScene" uid="uid://b5eln084deexh" path="res://Enemies/green_enemy.tscn" id="2_htaau"]
[ext_resource type="PackedScene" uid="uid://bff2do2al888i" path="res://Enemies/yellow_enemy.tscn" id="3_w1vcc"]
[ext_resource type="PackedScene" uid="uid://ncyr63y247mg" path="res://pink_enemy.tscn" id="4_712wq"]
[ext_resource type="Resource" uid="uid://cl1iendgoa1qr" path="res://game_stats.tres" id="5_0vgvc"]

[node name="EnemyGenerator" type="Node2D"]
script = ExtResource("1_ewimx")
GreenEnemyScene = ExtResource("2_htaau")
YellowEnemyScene = ExtResource("3_w1vcc")
PinkEnemyScene = ExtResource("4_712wq")
game_stats = ExtResource("5_0vgvc")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("2_63q4o")

[node name="GreenEnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="YellowEnemySpawnTimer" type="Timer" parent="."]
process_mode = 4
wait_time = 5.0
one_shot = true
autostart = true

[node name="PinkEnemySpawnTimer" type="Timer" parent="."]
process_mode = 4
wait_time = 10.0
one_shot = true
autostart = true
